--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Amy Louise Stevens </title>
 </head>
 <body>
-<h1>Amy Louise Stevens - Writer, translator and developer</h1>
+<h1>Amy Louise Stevens - Writer, translator, and developer-in-training</h1>
 	<p>This page has been created as part of a project to learn HTML, CSS and Javascript.
 	<div><h4>Jump to section</h4></div></p>
 		<section>
