--- a/index.html
+++ b/index.html
@@ -2,11 +2,36 @@
 <html>
 <head>
 	<title>Amy Louise Stevens </title>
+	<style>
+	p {
+		color: gray;
+		font-size: 20px;
+		width: 1800px;
+		text-align: left
+	}
+	
+	div {
+		color: gray;
+		font-size: 20px;
+		width: 1800px;
+		text-align: left;
+	}
+	
+	h1 {
+		color: purple;
+		font-size: 30px;
+	}
+	
+	h2 {
+		color: purple;
+		font-size: 26px;
+	}
+	</style>
 </head>
 <body>
-<h1>Amy Louise Stevens - Writer, translator, and developer-in-training</h1>
-	<p>This page has been created as part of a project to learn HTML, CSS and Javascript.
-	<div><h4>Jump to section</h4></div></p>
+<h1>Amy Louise Stevens - Writer, translator and developer-in-training</h1>
+	<p>This page has been created as part of a project to learn HTML, CSS and Javascript.</p>
+	<div><h4>Jump to section</h4></div>
 		<section>
 			<ul>
 			<li><a href="#section1">Who are you?</a></li>
