--- a/index.html
+++ b/index.html
@@ -3,18 +3,11 @@
 <head>
 	<title>Amy Louise Stevens </title>
 	<style>
-	p {
+	p, #pdiv {
 		color: gray;
 		font-size: 20px;
 		width: 1800px;
 		text-align: left
-	}
-	
-	#pdiv {
-		color: gray;
-		font-size: 20px;
-		width: 1800px;
-		text-align: left;
 	}
 	
 	h1 {
@@ -27,10 +20,12 @@
 		color: purple;
 		font-size: 26px;
 	}
+	
 	h4 {
 		color: purple;
 		font-size: 22px;
 	}
+	
 	</style>
 </head>
 <body>
