--- a/index.html
+++ b/index.html
@@ -81,5 +81,8 @@
 		<div>
 		<a href="#top">Back to the top</a>
 		</div>
+<footer>
+ <small>&copy; Copyright 2022, Amy Louise Stevens</small>
+</footer>
 </body>
 </html>
