--- a/index.html
+++ b/index.html
@@ -2,43 +2,7 @@
 <html>
 <head>
 	<title>Amy Louise Stevens </title>
-	<style>
-	
-	body {
-		background-color: #dee2ff;
-		font-family: Georgia, serif;
-		line-height: 1.5;
-	}
-	section, .highlight {
-		background-color: #feeafa;
-		width: 1800px;
-	}
-	
-	p, #pdiv, ul {
-		color: #8e9aaf;
-		font-size: 20px;
-		width: 1800px;
-		text-align: left;
-	}
-	
-			
-	h1 {
-		color: #8e9aaf;
-		font-size: 30px;
-		text-align: center;
-	}
-	
-	h2 {
-		color: #8e9aaf;
-		font-size: 26px;
-	}
-	
-	h4 {
-		color: #8e9aaf;
-		font-size: 22px;
-	}
-	
-	</style>
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <h1>Amy Louise Stevens - Writer, translator and developer-in-training</h1>
