--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Amy Louise Stevens </title>
-	<link rel="stylesheet" href="Styles.css">
+	<link rel="stylesheet" href="styles.css">
 	
 </head>
 <body>
